--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "grunt-svgstore": "^0.5.0",
     "grunt-svgmin": "~2.0.0",
     "node-sass": "~1.1.4",
-    "grunt-contrib-rename": "0.0.3"
+    "grunt-contrib-rename": "0.0.3",
+    "grunt-csscomb": "~3.0.0",
+    "grunt-contrib-cssmin": "~0.12.2"
   }
 }
