--- a/package.json
+++ b/package.json
@@ -10,24 +10,27 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.10.0",
+    "errorhandler": "^1.3.5",
+    "express": "^4.10.6",
+    "marked": "^0.3.3",
     "nunjucks": "^1.1.0",
-    "express": "^4.10.6"
+    "nunjucks-markdown": "^1.0.0"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^1.0.1",
     "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-copy": "^0.7.0",
+    "grunt-contrib-cssmin": "~0.12.2",
+    "grunt-contrib-rename": "0.0.3",
     "grunt-contrib-watch": "~0.5.3",
+    "grunt-csscomb": "~3.0.0",
     "grunt-modernizr": "^0.6.0",
-    "grunt-open": "^0.2.3",
     "grunt-sass": "~0.16.1",
     "grunt-spritesmith": "^2.20.0",
-    "grunt-svgstore": "^0.5.0",
     "grunt-svgmin": "~2.0.0",
-    "node-sass": "~1.1.4",
-    "grunt-contrib-rename": "0.0.3",
-    "grunt-csscomb": "~3.0.0",
-    "grunt-contrib-cssmin": "~0.12.2"
+    "grunt-svgstore": "^0.5.0",
+    "morgan": "^1.5.2",
+    "node-sass": "~1.1.4"
   }
 }
