--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "grunt-svgmin": "~2.0.0",
     "grunt-svgstore": "^0.5.0",
     "morgan": "^1.5.2",
-    "node-sass": "~1.1.4"
+    "node-sass": "~1.1.4",
+    "grunt-version": "~1.0.0"
   }
 }
