--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "./node_modules/node-sass/bin/node-sass sass/styleguide/sandbox.scss public/stylesheets/main.css;./node_modules/node-sass/bin/node-sass sass/docs/docs.scss public/stylesheets/docs.css;"
+    "postinstall": "./node_modules/node-sass/bin/node-sass sass/styleguide/main.scss public/stylesheets/main.css;./node_modules/node-sass/bin/node-sass sass/docs/docs.scss public/stylesheets/docs.css;"
   },
   "author": "Buti",
   "license": "ISC",
