--- a/package.json
+++ b/package.json
@@ -35,5 +35,6 @@
     "grunt-svgmin": "~2.0.0",
     "grunt-svgstore": "^0.5.0",
     "grunt-pixrem": "git://github.com/SocialBro/grunt-pixrem.git"
-  }
+  },
+  "engine": "node 0.10.24"
 }
