--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "nunjucks": "^1.1.0",
     "nunjucks-markdown": "^1.0.0",
     "morgan": "^1.5.2",
-    "node-sass": "~2.1.1",
+    "node-sass": "^3.7.0",
     "http-auth": "~2.2.5"
   },
   "devDependencies": {
